src/org/ffmpeg/avformat/AvformatLibrary.java

	/**
	 * Original signature : <code>int avformat_write_header(AVFormatContext*, AVDictionary**)</code><br>
	 * <i>native declaration : libavformat/avformat.h:327</i><br>
	 * @deprecated use the safer method {@link #avformat_write_header(org.ffmpeg.avformat.AVFormatContext, org.ffmpeg.avutil.AVDictionary.ByReference[])} instead
	 */
	@Deprecated 
	int avformat_write_header(AVFormatContext s, PointerByReference options);
	/**
	 * Original signature : <code>int avformat_write_header(AVFormatContext*, AVDictionary**)</code><br>
	 * <i>native declaration : libavformat/avformat.h:327</i>
	 */
	int avformat_write_header(AVFormatContext s, org.ffmpeg.avutil.AVDictionary.ByReference options[]);
	/**
	 * Original signature : <code>int av_write_frame(AVFormatContext*, AVPacket*)</code><br>
	 * <i>native declaration : libavformat/avformat.h:329</i>
	 */
	int av_write_frame(AVFormatContext s, AVPacket pkt);
	/**
	 * Original signature : <code>int av_interleaved_write_frame(AVFormatContext*, AVPacket*)</code><br>
	 * <i>native declaration : libavformat/avformat.h:331</i>
	 */
	int av_interleaved_write_frame(AVFormatContext s, AVPacket pkt);
	/**
	 * Original signature : <code>int av_write_trailer(AVFormatContext*)</code><br>
	 * <i>native declaration : libavformat/avformat.h:333</i>
	 */
	int av_write_trailer(AVFormatContext s);
	/**
	 * Original signature : <code>AVOutputFormat* av_guess_format(const char*, const char*, const char*)</code><br>
	 * <i>native declaration : libavformat/avformat.h:335</i><br>
	 * @deprecated use the safer methods {@link #av_guess_format(java.lang.String, java.lang.String, java.lang.String)} and {@link #av_guess_format(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	AVOutputFormat av_guess_format(Pointer short_name, Pointer filename, Pointer mime_type);
	/**
	 * Original signature : <code>AVOutputFormat* av_guess_format(const char*, const char*, const char*)</code><br>
	 * <i>native declaration : libavformat/avformat.h:335</i>
	 */
	AVOutputFormat av_guess_format(String short_name, String filename, String mime_type);
	/**
	 * Original signature : <code>AVCodecID av_guess_codec(AVOutputFormat*, const char*, const char*, const char*, AVMediaType)</code><br>
	 * <i>native declaration : libavformat/avformat.h:337</i><br>
	 * @deprecated use the safer methods {@link #av_guess_codec(org.ffmpeg.avformat.AVOutputFormat, java.lang.String, java.lang.String, java.lang.String, int)} and {@link #av_guess_codec(org.ffmpeg.avformat.AVOutputFormat, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int av_guess_codec(AVOutputFormat fmt, Pointer short_name, Pointer filename, Pointer mime_type, int type);
	/**
	 * Original signature : <code>AVCodecID av_guess_codec(AVOutputFormat*, const char*, const char*, const char*, AVMediaType)</code><br>
	 * <i>native declaration : libavformat/avformat.h:337</i>
	 */
	int av_guess_codec(AVOutputFormat fmt, String short_name, String filename, String mime_type, int type);
	/**
	 * Original signature : <code>void av_dump_format(AVFormatContext*, int, const char*, int)</code><br>
	 * <i>native declaration : libavformat/avformat.h:339</i><br>
	 * @deprecated use the safer methods {@link #av_dump_format(org.ffmpeg.avformat.AVFormatContext, int, java.lang.String, int)} and {@link #av_dump_format(org.ffmpeg.avformat.AVFormatContext, int, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	void av_dump_format(AVFormatContext ic, int index, Pointer url, int is_output);
	/**
	 * Original signature : <code>void av_dump_format(AVFormatContext*, int, const char*, int)</code><br>
	 * <i>native declaration : libavformat/avformat.h:339</i>
	 */
	void av_dump_format(AVFormatContext ic, int index, String url, int is_output);
	public static class AVCodecTag extends PointerType {
		public AVCodecTag(Pointer address) {
			super(address);
		}
		public AVCodecTag() {
			super();
		}
	};
	public static class AVDeviceInfoList extends PointerType {
		public AVDeviceInfoList(Pointer address) {
			super(address);
		}
		public AVDeviceInfoList() {
			super();
		}
	};
	public static class av_format_control_message extends PointerType {
		public av_format_control_message(Pointer address) {
			super(address);
		}
		public av_format_control_message() {
			super();
		}
	};
}
